# mcp-ms-office-documents

./: CHANGELOG.md  MEMORY.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docx_tools/: conditional_templates.py
docx_tools/advanced/: __init__.py  features.py
edit_tools/: __init__.py  docx_editor.py  pptx_editor.py  xlsx_editor.py
mcp_office_documents/: __init__.py  app.py  server.py
merge_tools/: __init__.py  merger.py
pdf_tools/: __init__.py  base_pdf_tool.py
pptx_tools/: helpers.py
tests/: test_conditional_templates.py  test_docx_advanced.py  test_edit_tools.py  test_merge_tools.py  test_pdf_tools.py  test_pptx_creation.py  test_xlsx_charts.py  test_xlsx_creation.py  test_xlsx_formatting.py
xlsx_tools/: formatting.py  helpers.py
xlsx_tools/charts/: __init__.py  chart_builder.py
